[gd_scene load_steps=2 format=3 uid="uid://ltl3a2bm1ma4"]

[ext_resource type="Script" uid="uid://gin3riwa6nsq" path="res://Scenes/pause_menu.gd" id="1_emv3i"]

[node name="pause_menu" type="CanvasLayer"]
process_mode = 1
script = ExtResource("1_emv3i")

[node name="MenuRect" type="ColorRect" parent="."]
offset_left = 382.0
offset_top = 295.0
offset_right = 699.0
offset_bottom = 424.0

[node name="Resume" type="Button" parent="MenuRect"]
z_index = 5
layout_mode = 0
offset_left = 117.0
offset_top = 12.0
offset_right = 189.0
offset_bottom = 43.0
pivot_offset = Vector2(47, 14)
text = "RESUME"

[node name="ReturnMainMenu" type="Button" parent="MenuRect"]
z_index = 5
layout_mode = 0
offset_left = 90.0
offset_top = 54.0
offset_right = 219.0
offset_bottom = 85.0
text = "TO MAIN MENU"

[node name="ReturnConfirmDialog" type="ConfirmationDialog" parent="."]

[connection signal="pressed" from="MenuRect/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MenuRect/ReturnMainMenu" to="." method="_on_quit_pressed"]
